Fix of MDEV-511.

As far as we reopen tables so TABLE become invalid we should remove the pointer on cleanup().